// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignInFactorTwoBackupCodeCard snapshots > renders default state 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.backupCodeMfa.title"
          >
            Enter a backup code
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.backupCodeMfa.subtitle"
            data-variant="body"
          >
            Your backup code is the one you got when setting up two-step authentication.
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-ji79b9"
      >
        <form
          class="cl-form 🔒️ css-vvtys3"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__code 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__code 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__code 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__code-field cl-required 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__backupCode"
                    for="code-field"
                  >
                    Backup code
                  </label>
                </div>
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  aria-required="true"
                  class="cl-formFieldInput cl-input cl-formFieldInput__code cl-input__code cl-required 🔒️ css-bdpa54"
                  data-feedback="info"
                  data-variant="default"
                  id="code-field"
                  name="code"
                  placeholder=""
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <div
            class="css-bails5"
          >
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
            <div
              class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
            >
              <a
                class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
                data-localization-key="footerActionLink__useAnotherMethod"
                href="https://clerk.com/"
              >
                Use another method
              </a>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorTwoBackupCodeCard snapshots > renders with reset password subtitle 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.backupCodeMfa.title"
          >
            Enter a backup code
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.forgotPassword.subtitle"
            data-variant="body"
          >
            to reset your password
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-ji79b9"
      >
        <form
          class="cl-form 🔒️ css-vvtys3"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__code 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__code 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__code 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__code-field cl-required 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__backupCode"
                    for="code-field"
                  >
                    Backup code
                  </label>
                </div>
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  aria-required="true"
                  class="cl-formFieldInput cl-input cl-formFieldInput__code cl-input__code cl-required 🔒️ css-bdpa54"
                  data-feedback="info"
                  data-variant="default"
                  id="code-field"
                  name="code"
                  placeholder=""
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <div
            class="css-bails5"
          >
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
            <div
              class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
            >
              <a
                class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
                data-localization-key="footerActionLink__useAnotherMethod"
                href="https://clerk.com/"
              >
                Use another method
              </a>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
